fixed text overlap issue
At 310px, the logo would overlap the border.

--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ footer p {
   .logo{
     text-align: left;
     font-size: 5vw;
+    max-width: fit-content;
   }
 
   .joinPic{
